--- a/MQ2HUD.ini
+++ b/MQ2HUD.ini
@@ -14,6 +14,7 @@ UseFontSize=on
 Macro=3,4,1210,25,215,0,215,Macro Running: ${Macro.Name}
 GameTime1=3,4,1110,10,0,255,0,Game Time:
 GameTime2=3,4,1110,25,255,255,255,${GameTime.Hour}:${GameTime.Minute}  
+; |======================================== GHETTO XTARGET WORKAROUND===>
 Spawn1=3,5,1210,605,255,255,0,#1    ${If[${NearestSpawn[1,npc radius 40].Name.NotEqual["NULL"]},${NearestSpawn[1,npc radius 40].Level},]} - ${If[${NearestSpawn[1,npc radius 40].Name.NotEqual["NULL"]},${NearestSpawn[1,npc radius 40].CleanName},]} - ${If[${NearestSpawn[1,npc radius 40].Name.NotEqual["NULL"]},${NearestSpawn[1,npc radius 40].Class},]}
 
 Spawn1HP=3,5,1185,605,000,255,000,${If[${NearestSpawn[1,npc radius 40].Name.NotEqual["NULL"]},${NearestSpawn[1,npc radius 40].PctHPs},]}
@@ -41,14 +42,13 @@ PC3=3,3,410,45,255,0,255,${If[${NearestSpawn[9,pc radius 1000].Name.NotEqual["NU
 PC4=3,3,410,55,255,0,255,${If[${NearestSpawn[10,pc radius 1000].Name.NotEqual["NULL"]},${NearestSpawn[10,pc radius 9000].Level},]} ${If[${NearestSpawn[10,pc radius 1000].Name.NotEqual["NULL"]},${NearestSpawn[10,pc radius 9000].CleanName},]} ${If[${NearestSpawn[10,pc radius 1000].Name.NotEqual["NULL"]},${NearestSpawn[10,pc radius 9000].Class},]}
 PC5=3,3,410,65,255,0,255,${If[${NearestSpawn[11,pc radius 1000].Name.NotEqual["NULL"]},${NearestSpawn[11,pc radius 9000].Level},]} ${If[${NearestSpawn[11,pc radius 1000].Name.NotEqual["NULL"]},${NearestSpawn[11,pc radius 9000].CleanName},]} ${If[${NearestSpawn[11,pc radius 1000].Name.NotEqual["NULL"]},${NearestSpawn[11,pc radius 9000].Class},]}
 PC6=3,3,410,75,255,0,255,${If[${NearestSpawn[12,pc radius 1000].Name.NotEqual["NULL"]},${NearestSpawn[12,pc radius 9000].Level},]} ${If[${NearestSpawn[12,pc radius 1000].Name.NotEqual["NULL"]},${NearestSpawn[12,pc radius 9000].CleanName},]} ${If[${NearestSpawn[12,pc radius 1000].Name.NotEqual["NULL"]},${NearestSpawn[12,pc radius 9000].Class},]}
-
 ; |======================================== EXP INFO===>
-Manwe_AA=3,4,1350,10,255,255,000,${Int[${NetBots[Manwe].PctExp}]}% - ${NetBots[Manwe].Level} - Manwe
-Varda_AA=3,4,1350,25,255,255,000,${Int[${NetBots[Varda].PctExp}]}% - ${NetBots[Varda].Level} - Varda
-Luthien_AA=3,4,1350,40,255,255,000,${Int[${NetBots[Luthien].PctExp}]}% - ${NetBots[Luthien].Level} - Luthien
-Ainulindale_AA=3,4,1350,55,255,255,000,${Int[${NetBots[Ainulindale].PctExp}]}% - ${NetBots[Ainulindale].Level} - Ainulindale
-Ilmare_AA=3,4,1350,70,255,255,000,${Int[${NetBots[Ilmare].PctExp}]}% - ${NetBots[Ilmare].Level} - Ilmare
-Mithrandir_AA=3,4,1350,85,255,255,000,${Int[${NetBots[Mithrandir].PctExp}]}% - ${NetBots[Mithrandir].Level} - Mithrandir
+Manwe_XA=3,4,1350,10,255,255,000,${Int[${NetBots[Manwe].PctExp}]}% - ${NetBots[Manwe].Level} - Manwe
+Varda_XA=3,4,1350,25,255,255,000,${Int[${NetBots[Varda].PctExp}]}% - ${NetBots[Varda].Level} - Varda
+Luthien_XA=3,4,1350,40,255,255,000,${Int[${NetBots[Luthien].PctExp}]}% - ${NetBots[Luthien].Level} - Luthien
+Ainulindale_XA=3,4,1350,55,255,255,000,${Int[${NetBots[Ainulindale].PctExp}]}% - ${NetBots[Ainulindale].Level} - Ainulindale
+Ilmare_XA=3,4,1350,70,255,255,000,${Int[${NetBots[Ilmare].PctExp}]}% - ${NetBots[Ilmare].Level} - Ilmare
+Mithrandir_XA=3,4,1350,85,255,255,000,${Int[${NetBots[Mithrandir].PctExp}]}% - ${NetBots[Mithrandir].Level} - Mithrandir
 
 ; <===============================================================|
 [Target_Info] 
