--- a/Macros/e3 Macro Inis/Advanced Settings.ini
+++ b/Macros/e3 Macro Inis/Advanced Settings.ini
@@ -140,13 +140,14 @@ PAL Function#7=check_Nukes
 PAL Function#8=check_Debuffs
 ;PAL Function#9=check_JJBoots 
 [RNG Functions]
-RNG Function#1=check_Burns
-RNG Function#2=check_Heals
-RNG Function#3=check_Cures
-RNG Function#4=check_AE
-RNG Function#5=check_DoTs
-RNG Function#6=check_Nukes
-RNG Function#7=check_Buffs
+RNG Function#1=check_Tanking
+RNG Function#2=check_Burns
+RNG Function#3=check_Heals
+RNG Function#4=check_Cures
+RNG Function#5=check_AE
+RNG Function#6=check_DoTs
+RNG Function#7=check_Nukes
+RNG Function#8=check_Buffs
 [ROG Functions]
 ROG Function#1=check_Burns
 ROG Function#2=check_Buffs
