--- a/Macros/e3 Macro Inis/Advanced Settings.ini
+++ b/Macros/e3 Macro Inis/Advanced Settings.ini
@@ -88,7 +88,7 @@ CLR Function#9=check_Manastone
 [DRU Functions]
 DRU Function#1=check_healChain
 DRU Function#2=check_Heals
-ENC Function#3=check_Charm
+DRU Function#3=check_Charm
 DRU Function#4=check_Cures
 DRU Function#5=check_Burns
 DRU Function#6=check_Buffs
