--- a/MQ2Nav.ini
+++ b/MQ2Nav.ini
@@ -7,6 +7,8 @@ Banker=-454.216 -62.6186 0.00200076
 gfay_zonein=165.966 42.3781 0.00200076  
 staging_area=-490.996 -35.1643 0.00200076 
 sell=-386.112 -80.3814 0.00200076 
+sfelwith_entrance=-718.73 329.094 -13.998 
+food=-374.189 4.42441 0.00200076 
 [cazicthule]
 Wizard_spire=0 0 0 
 feerott_zoneout=-72.6105 20.46 0.00200076 
@@ -44,3 +46,22 @@ VisualNavPathHiddenOpacity=0.600000
 VisualNavPathBorderWidth=0.200000
 VisualNavPathLineWidth=0.900000
 DebugRenderPathing=off
+[crushbone]
+faction_camp=61.3555 152.522 19.4885 
+[nektulos]
+Neriak_zone=-1110.11 2200 0.00200073   
+Neriak_entrance=-1110.93 2317.45 0.00200073 
+[neriaka]
+nek_forest=151.81 4.3559 28.002 
+commons_entrance=-307.669 42.9178 -13.998 
+commons_zone=-380 89 -13.998   
+[neriakb]
+fquarter_entrance=-406.169 85.7348 -13.998 
+thirdgate_entrance=-857.564 188.785 -41.9667 
+thirdgate_zone=-859.17 210 -41.9667     
+[neriakc]
+commons_entrance=-840.738 218.135 -41.9667 
+[felwitheb]
+nfelwithe_entrance=-830.133 257.908 -13.998 
+zone_room=-603.205 430.044 27.002 
+mage_zoneout=-549.628 745.46 0.00200076 
