--- a/Macros/e3 Macro Inis/Loot Settings.ini
+++ b/Macros/e3 Macro Inis/Loot Settings.ini
@@ -116,7 +116,11 @@ Brutechopper 80p(L)=Keep
 Blighted Robe=Keep
 Bladestopper 9p(L)=Keep
 Blackened Sapphire 1p5c=Keep
-Blighted Trousers=Keep
+Blighted Trousers=Skip
+Blighted Gloves=Keep
+Blighted Sleeves=Keep
+Blighted Armband=Skip
+Blighted Boots=Skip
 [C]
 C is for=
 Cloth Sandals=destroy
@@ -177,6 +181,8 @@ Carmine Sleeves=Keep
 Carmine Gloves=Keep
 Crystalline Spear 60p=Keep
 Cryosilk Amice=Keep
+Carmine Boots=Keep
+Carmine Pants=Skip
 [D]
 D is for=
 Dagger*=Keep
@@ -336,6 +342,7 @@ Globe of Shadow (L)=Keep
 Golden Pendant 15p=Keep
 Gold Plated Koshigatana 32p=Keep
 Gardash (L)=Keep
+Girdle of the Diligent 4p(L)=Keep
 [H]
 H is for=
 High Quality Bear Skin (20)=Skip
@@ -455,14 +462,14 @@ Low Quality Cat Pelt 6p5c(20)=destroy
 Large Snake Rattle 1p5c=destroy
 Lizardscale Mantle 3p=Keep
 Lustrous Russet Bracer=Keep
-Lustrous Russet Boots=Keep
+Lustrous Russet Boots=Skip
 Lyssa`s Darkwood Piccolo 30p=Keep
-Lustrous Russet Helm=Keep
-Lustrous Russet Greaves=Keep
-Lustrous Russet Breastplate=Keep
-Lustrous Russet Vambraces=Keep
+Lustrous Russet Helm=Skip
+Lustrous Russet Greaves=Skip
+Lustrous Russet Breastplate=Skip
+Lustrous Russet Vambraces=Skip
 Leather Boots 1p=destroy
-Lustrous Russet Gauntlets=Keep
+Lustrous Russet Gauntlets=Skip
 Lava Rock (20)=Keep
 Lizardscale Cloak 4p=Keep
 [M]
@@ -661,7 +668,7 @@ Russet Oxide 1p(20)=destroy
 Rune of Nagafen 5c(20)=Skip
 Rune of Periphery (20)=Skip
 Rune of the Cyclone 1p(20)=Skip
-Rune of Concussion 1p(20)=Skip
+Rune of Concussion 1p(20)=Keep
 Rune of Sorcery 1p(20)=Skip
 Rune of Infraction 1p(20)=Skip
 Rune of Petrification 2p(20)=Skip
@@ -673,7 +680,7 @@ Rune Etched Bracer=Skip
 Rune of Tyranny 2p(20)=Skip
 Rod of Unbound Thought (L)=Keep
 Rune of Paralysis 2p(20)=Skip
-Rune of Rathe 1p(20)=Skip
+Rune of Rathe 1p(20)=Keep
 Rune of Howling 1p(20)=Skip
 Runed Mithril Bracer 175p=Keep
 Rune of Consumption 1p(20)=Skip
@@ -683,7 +690,7 @@ Rune of Arrest 1p(20)=Skip
 Rusty Bastard Sword=destroy
 Rune of Banding 1p(20)=Skip
 Ring of the Ancients (L)=Keep
-Rune of Impetus 2p(20)=Skip
+Rune of Impetus 2p(20)=Keep
 Ruby Crown 200p=Keep/sell
 Rune of Ap`Sagor 4p(20)=Keep
 Rune of Frost 2p(20)=Keep
@@ -1068,6 +1075,7 @@ Umbral Platemail Helm=Skip
 Umbral Platemail Breastplate=Skip
 Umbral Platemail Gauntlets=Skip
 Umbral Platemail Bracer=Skip
+Umbral Platemail Vambraces=Skip
 [V]
 V is for=
 Vegetables (20)=destroy
@@ -1081,21 +1089,21 @@ Velishoul's Tome Pg.17 5c(20)=Keep
 Vampire Bat Saliva (20)=destroy
 Valorium Boots=Skip
 Vial of Shadow (L)=destroy
-Vermiculated Bracelet=Keep
+Vermiculated Bracelet=Skip
 Valorium Vambraces=Skip
 Valorium Greaves=Skip
 Valorium Bracers=Skip
 Valorium Helmet=Skip
 Valorium Chestplate=Skip
 Verdant Tessera (L)=Keep
-Vampire Dust 5c(20)=Keep
+Vampire Dust 5c(20)=Skip
 Vexthorne (L)=Keep
 Veeshan's Key (L)=Keep
-Vermiculated Tunic=Keep
-Vermiculated Boots=Keep
+Vermiculated Tunic=Skip
+Vermiculated Boots=Skip
 Valorium Gauntlets=Skip
-Vermiculated Armplates=Keep
-Vermiculated Leggings=Keep
+Vermiculated Armplates=Skip
+Vermiculated Leggings=Skip
 [W]
 W is for=
 Worn Great Staff=destroy
@@ -1153,9 +1161,9 @@ Words of Incarceration (20)=Keep
 Words of Collection (Beza) 1p(20)=Keep
 Words of Collection (Caza) 2p(20)=Keep
 Words of Duration 1p(20)=Skip
-Words of Requisition 2p(20)=Skip
+Words of Requisition 2p(20)=Keep
 Words of Motion 1p(20)=Skip
-Words of Bondage 1p(20)=Skip
+Words of Bondage 1p(20)=Keep
 Words of Burnishing 2p(20)=Skip
 Words of Dark Paths 1p(20)=Skip
 Words of Purification 1p5c(20)=Skip
